edit config file
